--- a/css/general.css
+++ b/css/general.css
@@ -36,15 +36,15 @@ body {
     overflow: hidden;
     background-image: url(../images/pac-man-8-bit.gif);
     background-color: black;
-    background-repeat: repeat
-    background position: top center;
+    background-repeat: repeat;
+    background-position: top center;
     background-size: 9rem;
 }
 
 header {
     overflow: hidden;
     background-color: gold;
-    padding: 1rem -0.5%
+    padding: 1rem -0.5%;
 }
 
 .logo {
@@ -70,7 +70,7 @@ h1 {
     background-color: rgba(255, 215, 0, 0.9);
     text-transform: uppercase; 
     letter-spacing: -.1rem;
-    margin: rem 0;
+    margin: 1rem 0;
     padding: .25rem 5%;
     text-shadow: .15rem .15rem .05rem rgba(0, 0, 0, .4);
 }
