--- a/css/general.css
+++ b/css/general.css
@@ -180,7 +180,7 @@ footer a{
     color:black;
 }
 
-ol strong {
+ul strong {
     font-family: sans-serif, "sans-serif", serif;
     color: gold;
 }
